--- a/css/style.css
+++ b/css/style.css
@@ -24,22 +24,23 @@ img{
     width: 550px;
 }
 div{
-    height: 150px;
+    height:auto;
+    min-height: 150px;
     padding: 25px;
 }
 #red
 {
-    background-color: red;
+    background-color:#ff0000;
     text-align: right;
 }
 #blue
 {
-    background-color: blue;
+    background: color #0000ff;
     text-align: left;
 }
 #yellow 
 {
-    background-color: yellow;
+    background-color:#ffff00;
     text-align: right;
 }
 #yellow h2{
@@ -55,8 +56,10 @@ div{
     background-color: #008000;
     text-align: left;
 }
+footer{
+    padding-bottom: 10px;
+    padding-right:10px;
+}
 footer p{
 text-align: center;
-padding-bottom: 10px;
-padding-right:10px;
 }
