--- a/css/style.css
+++ b/css/style.css
@@ -30,12 +30,12 @@ div{
 }
 #red
 {
-    background-color:#ff0000;
+    background-color: #ff0000;
     text-align: right;
 }
 #blue
 {
-    background: color #0000ff;
+    background-color: #0000ff;
     text-align: left;
 }
 #yellow 
@@ -56,10 +56,10 @@ div{
     background-color: #008000;
     text-align: left;
 }
-footer{
-    padding-bottom: 10px;
-    padding-right:10px;
-}
 footer p{
 text-align: center;
+padding-bottom:10px;
+padding-right:10px;
+padding-left: 0px;
+padding-top: 0px;
 }
